add loading screen

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <link rel="stylesheet" href="./lib/Pickr/nano.min.css"/> 
     </head>
     <body>
+        <div id=loader><div class="lds-ripple"><div></div><div></div></div></div>
     
         
 
